Update with new VDA dll
Update with VDA dll for Win10 build 21292.
Use my settings. 
Add exe built using autohotkeycompiler 
  'C:\Program Files\AutoHotkey\Compiler\Ahk2Exe.exe' /in .\virtual-desktop-enhancer.ahk

--- a/settings.ini
+++ b/settings.ini
@@ -20,8 +20,8 @@ FadeOutAnimationDuration=100
 OnEveryMonitor=1
 
 [KeyboardShortcutsCombinations]
-TogglePinWindow=Win, Ctrl, Shift, Q
-TogglePinApp=Win, Ctrl, Shift, A
+TogglePinWindow=Win, LCtrl, LShift, W
+TogglePinApp=Win, LCtrl, LShift, A
 PinWindow=
 PinApp=
 UnpinWindow=
@@ -31,9 +31,9 @@ OpenDesktopManager=LAlt, SC029
 ChangeDesktopName=Win, F2
 
 [KeyboardShortcutsModifiers]
-SwitchDesktop=Win, Ctrl
-MoveWindowToDesktop=
-MoveWindowAndSwitchToDesktop=Win, Ctrl, Shift
+SwitchDesktop=LAlt, LCtrl
+MoveWindowToDesktop=LShift, LAlt
+MoveWindowAndSwitchToDesktop=LAlt, LCtrl, LShift
 NextTenDesktops=
 
 [KeyboardShortcutsIdentifiers]
